[package]
name = "versor"
version = "0.1.0"
authors = ["Quentin <Quentin Inkling>", "Simon <Simon Naumov>"]
edition = "2018"

[dependencies]
# telegram
teloxide = "0.5"
tokio = { version = "1.7", features = ["full"] }
tokio-stream = "0.1.5"

# config
dotenv = "0.15"
config = "0.11.0"
serde = "=1.0"
serde_json = "1.0"

# logging
log = "0.4"
pretty_env_logger = "0.4"

# other
unicode-segmentation = "1.7"
rand = "0.8"
json = "0.12"
reqwest = "0.11"
anyhow = "1.0"
futures = "0.3"
